apps/routers/talos-related-routes/howard/talos-dev-webhook/talos-dev-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: talos-dev-webhook
  namespace: traefik-staging
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`talos-dev-webhook.howard.moomboo.space`)
    services:
    - kind: Service
      name: talos-dev-public-http
      namespace: traefik-staging
      port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: talos-dev-web
  namespace: flux-system
spec:
  entryPoints:
  - websecure
  routes:
  - match: HostSNI(`talos-dev-webhook.howard.moomboo.space`)
    services:
    - name: talos-dev-public-http
      namespace: traefik-staging
      port: 80
  tls:
    secretName: talos-dev-webhook-tls
    # certResolver: prodresolver
    passthrough: false
